feat: added data load endpoint WIP
